add POST /users/me/agents/logoff
