# wazo_agentd/http.py
@@ -244,6 +244,15 @@ class _LogoffAgentByNumber(_BaseResource):
         return '', 204
 
 
+class _LogoffUserAgent(_BaseResource):
+    @required_acl('agentd.users.me.agents.logoff.create')
+    def post(self):
+        tenant_uuids = self._build_tenant_list({'recurse': True})
+        user_uuid = _extract_user_uuid()
+        self.service_proxy.logoff_user_agent(user_uuid, tenant_uuids=tenant_uuids)
+        return '', 204
+
+
 class _LogoffAgents(_BaseResource):
     @required_acl('agentd.agents.logoff.create')
     def post(self):
@@ -318,6 +327,7 @@ class HTTPInterface:
         (_LoginUserAgent, '/users/me/agents/login'),
         (_LogoffAgentById, '/agents/by-id/<int:agent_id>/logoff'),
         (_LogoffAgentByNumber, '/agents/by-number/<agent_number>/logoff'),
+        (_LogoffUserAgent, '/users/me/agents/logoff'),
         (_AddAgentToQueue, '/agents/by-id/<int:agent_id>/add'),
         (_RemoveAgentFromQueue, '/agents/by-id/<int:agent_id>/remove'),
         (_PauseAgentByNumber, '/agents/by-number/<agent_number>/pause'),
