# wazo_agentd/service/handler/logoff.py
@@ -33,6 +33,15 @@ class LogoffHandler:
         self._handle_logoff(agent_status)
 
     @debug.trace_duration
+    def handle_logoff_user_agent(self, user_uuid, tenant_uuids=None):
+        logger.info('Executing logoff command (agent of user %s)', user_uuid)
+        with db_utils.session_scope():
+            agent_status = self._agent_status_dao.get_status_by_user(
+                user_uuid, tenant_uuids=tenant_uuids
+            )
+        self._handle_logoff(agent_status)
+
+    @debug.trace_duration
     def handle_logoff_all(self, tenant_uuids=None):
         logger.info('Executing logoff all command')
         self._logoff_manager.logoff_all_agents(tenant_uuids=tenant_uuids)
