# wazo_agentd/swagger/api.yml
@@ -245,6 +245,28 @@ paths:
           description: Agent does not exist or is not logged
           schema:
             $ref: '#/definitions/Error'
+  /users/me/agent/logoff:
+    post:
+      summary: Logoff the agent of the user holding the authentication token
+      description: '**Required ACL:** `agentd.users.me.agent.logoff.create`'
+      operationId: logoff_user_agent
+      tags:
+      - agent
+      - user
+      parameters:
+      - $ref: '#/parameters/tenantuuid'
+      responses:
+        '204':
+          description: The operation was performed succesfully
+        '400':
+          description: The token has no user; or wrong tenant; or the user has no agent
+          schema:
+            $ref: '#/definitions/Error'
+        '409':
+          description: Agent is already logged or another agent is already logged
+            on this line
+          schema:
+            $ref: '#/definitions/Error'
   /agents/by-number/{agent_number}/pause:
     post:
       summary: Pause an agent.
